// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscriptionModal subscriptionModal with bulkSubscriptionList renders correctly. 1`] = `
<div
  id="SubscriptionModal"
>
  <div
    className="bx--modal bx--modal-tall modalAddRepo"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="presentation"
    tabIndex={-1}
  >
    <div
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        <h4
          className="bx--modal-header__label"
        >
          rbac-test-app-gbapp
        </h4>
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="channelGridContainer"
        >
          <div
            className="subscriptionInfoClass"
          >
            <div
              className="progressHeader"
            >
              <div
                className="subscriptionNameHeader"
              >
                rbac-test-app-gbapp-guestbook
              </div>
              <div
                id="ProgressBar"
              >
                <div
                  className="percentagesContainers"
                >
                  <div
                    className="pass"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="completedSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources completed
                      </div>
                    </div>
                  </div>
                  <div
                    className="inprogress"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="inprogressSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources in progress
                      </div>
                    </div>
                  </div>
                  <div
                    className="fail"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="failedSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources failed
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="progressContainer"
                  style={
                    Object {
                      "background": "linear-gradient(to right,  #cccccc 0%, #cccccc 100%)",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="subHeader"
            >
              <div
                className="mainSubscriptionHeader"
              >
                Subscription
              </div>
              <div
                className="value"
              >
                rbac-test-app-gbapp-guestbook
              </div>
            </div>
            <div
              className="innerContent"
            >
              <div
                className="placement"
              >
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Namespace
                  </div>
                  <div
                    className="value"
                  >
                    rbac-test
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Channel
                  </div>
                  <div
                    className="value"
                  >
                    rbac-test-chan/rbac-test-channel
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Host cluster
                  </div>
                  <div
                    className="value"
                  >
                    local-cluster
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Deployables
                  </div>
                  <div
                    className="value"
                  >
                    <span>
                      N/A
                    </span>
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  />
                  <div
                    className="value"
                  >
                    <a
                      href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Asubscription%20name%3Arbac-test-app-gbapp-guestbook\\"}&showrelated=deployable"
                      target="_blank"
                    >
                      View all resources
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="innerContent"
            >
              <div
                className="placement"
              >
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Placement
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  >
                    Labels
                  </div>
                  <ul
                    className="labels-list"
                  >
                    <span
                      className="bx--tag bx--tag--beta"
                    >
                      app=gbapp
                    </span>
                    <span
                      className="bx--tag bx--tag--beta"
                    >
                       chart=gbapp-0.1.0
                    </span>
                    <span
                      className="bx--tag bx--tag--beta"
                    >
                      <div
                        className="bx--tooltip--definition"
                      >
                        <button
                          aria-describedby="definition-tooltip-1"
                          className="bx--tooltip__trigger"
                        >
                          +2
                        </button>
                        <div
                          aria-label=" heritage=Tiller release=rbac-test-app"
                          className="bx--tooltip--definition__bottom"
                          id="definition-tooltip-1"
                          role="tooltip"
                        >
                          <span
                            className="bx--tooltip__caret"
                          />
                          <p>
                             heritage=Tiller release=rbac-test-app
                          </p>
                        </div>
                      </div>
                    </span>
                  </ul>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  >
                    Target clusters
                  </div>
                  <div
                    className="value"
                  >
                    0
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  />
                  <div
                    className="value"
                  >
                    <a
                      href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Asubscription%20name%3Arbac-test-app-gbapp-guestbook\\"}&showrelated=cluster"
                      target="_blank"
                    >
                      View all clusters
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`subscriptionModal subscriptionModal with empty subscription list renders correctly. 1`] = `
<div
  id="SubscriptionModal"
>
  <div
    className="bx--modal bx--modal-tall modalAddRepo"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="presentation"
    tabIndex={-1}
  >
    <div
      className="bx--modal-container"
      role="dialog"
    >
      <div
        className="bx--modal-header"
      >
        
        <h2
          className="bx--modal-header__heading"
        >
          
        </h2>
        <button
          className="bx--modal-close"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close the modal"
            aria-label="close the modal"
            className="bx--modal-close__icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close the modal
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--modal-content"
      >
        <div
          className="channelGridContainer"
        >
          <div
            className="subscriptionInfoClass"
          >
            <div
              className="progressHeader"
            >
              <div
                className="subscriptionNameHeader"
              >
                
              </div>
              <div
                id="ProgressBar"
              >
                <div
                  className="percentagesContainers"
                >
                  <div
                    className="pass"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="completedSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources completed
                      </div>
                    </div>
                  </div>
                  <div
                    className="inprogress"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="inprogressSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources in progress
                      </div>
                    </div>
                  </div>
                  <div
                    className="fail"
                  >
                    <div
                      className="percentage"
                    >
                      0%
                    </div>
                    <div
                      className="resourceType"
                    >
                      <div
                        className="failedSquare"
                      />
                      <div
                        className="textResource"
                      >
                        Resources failed
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="progressContainer"
                  style={
                    Object {
                      "background": "linear-gradient(to right,  #cccccc 0%, #cccccc 100%)",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="subHeader"
            >
              <div
                className="mainSubscriptionHeader"
              >
                Subscription
              </div>
              <div
                className="value"
              >
                
              </div>
            </div>
            <div
              className="innerContent"
            >
              <div
                className="placement"
              >
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Namespace
                  </div>
                  <div
                    className="value"
                  >
                    
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Channel
                  </div>
                  <div
                    className="value"
                  >
                    
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Host cluster
                  </div>
                  <div
                    className="value"
                  >
                    
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Deployables
                  </div>
                  <div
                    className="value"
                  >
                    <span>
                      N/A
                    </span>
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  />
                  <div
                    className="value"
                  >
                    <a
                      href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Asubscription%20name%3A\\"}&showrelated=deployable"
                      target="_blank"
                    >
                      View all resources
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="innerContent"
            >
              <div
                className="placement"
              >
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeader"
                  >
                    Placement
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  >
                    Labels
                  </div>
                  <ul
                    className="labels-list"
                  />
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  >
                    Target clusters
                  </div>
                  <div
                    className="value"
                  >
                    0
                  </div>
                </div>
                <div
                  className="subHeader"
                >
                  <div
                    className="subscriptionInfoHeaderIndented"
                  />
                  <div
                    className="value"
                  >
                    <a
                      href="/multicloud/search?filters={\\"textsearch\\":\\"kind%3Asubscription%20name%3A\\"}&showrelated=cluster"
                      target="_blank"
                    >
                      View all clusters
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="bx--modal-footer"
      >
        <div
          className="bx--modal__buttons-container"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          />
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            inputref={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
